[package]
name = "my-test-crate"
version = { workspace = true }
edition = "2021"
license = { workspace = true }

[workspace]
members = []

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
serde = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8.0"
